add pdf and md files of class 5

--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -738,7 +738,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4542e144",
+   "id": "15f74861",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e45bb803",
+   "metadata": {},
+   "source": [
+    "## 习题4.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4543d8b2",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "771305ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 计算代价上看，最好还是用高斯消元法\n",
+    "A = sp.Matrix(3, 3, [1, 2, 3, 2, 3, 4, 2, 4, 7])\n",
+    "A.det()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7aecac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A.inv() @ sp.Matrix(3, 1, [1, 0, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31f13671",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A.inv() @ sp.Matrix(3, 1, [0, 2, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ed9aef4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A.inv() @ sp.Matrix(3, 2, [1, 1, 2, 5, 3, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7d005a2",
    "metadata": {},
    "outputs": [],
    "source": []
