update 习题 notebook, README.md and the list of assignments

--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -738,7 +738,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f74861",
+   "id": "ed72e029",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83ece4f4",
+   "metadata": {},
+   "source": [
+    "# 第4章 矩阵的代数运算"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2603d0e5",
+   "metadata": {},
+   "source": [
+    "## 习题4.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe9cd614",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa742d88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = sp.Matrix(2, 3, [1, 0, 1, 0, 2, 3])\n",
+    "B = sp.Matrix(3, 3, [2, -1, 4, 1, 0, -2, 0, 3, 1])\n",
+    "C = sp.Matrix(3, 2, [0, 2, -1, 0, 3, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72348182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(A @ B), display(B**2), display(A @ C), display(C @ A), display(B.T @ A.T);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dc2bf14",
    "metadata": {},
    "outputs": [],
    "source": []
