Updates from Overleaf

--- a/content/class-5.tex
+++ b/content/class-5.tex
@@ -141,7 +141,7 @@ A + uv^T \text{ 可逆 } & \Longleftrightarrow \begin{pmatrix} A + uv^T & 0 \\ 0
 & = \begin{pmatrix} A^{-1} & \dfrac{-A^{-1}u}{1 + v^TA^{-1}u} \\ -v^T A^{-1} & \dfrac{1}{1 + v^TA^{-1}u} \end{pmatrix} \begin{pmatrix} I & u \\ v^TA^{-1} & 1 + v^TA^{-1}u \end{pmatrix} \\
 & = \begin{pmatrix} A^{-1} - \dfrac{ A^{-1}uv^TA^{-1}}{1 + v^TA^{-1}u} & 0 \\ 0 & 1 \end{pmatrix}
 \end{align*}
-所以$(A + uv^T)^{-1} = A^{-1} - \dfrac{ A^{-1}uv^TA^{-1}}{1 + v^TA^{-1}u}.$
+所以$(A + uv^T)^{-1} = A^{-1} - \dfrac{ A^{-1}uv^TA^{-1}}{1 + v^TA^{-1}u}.$ 注意，最后算得的这个矩阵非对角元一定是$0,$ 如果不是，说明你哪一步算错了，需要检查改正。
 
 \vspace{2em}
 
@@ -173,6 +173,8 @@ $$\det A \cdot \det W = \det(AW) = \det(f(u^0)\omega_0, \cdots, f(u^{n-1})\omega
 以上情况比较特殊，实际上我们直接观察出来了$A$的所有特征向量与特征值，于是有
 $$AW = W\operatorname{diag}(f(u^0), \ldots, f(u^{n-1})),$$
 从而有$\det A = \det(\operatorname{diag}(f(u^0), \ldots, f(u^{n-1})))$.
+
+这次期中考试第一个计算行列式就差不多是一个循环矩阵的行列式，如果把中间两行调换一下的话。不过它只是一个4阶的行列式，不太需要用到这里的结论。用这个结论反而会把问题复杂化。
 
 \fi  % fi of \ifIncludeAnswer
 
