update the list of assignments; init class 6

--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 % \IncludeAnswerfalse
 
 \NewPagefalse
+
 \ifNewPage
 \newcommand{\newpageorvspace}{\newpage}
 \else
@@ -36,7 +37,8 @@
 % \input{content/class-2.tex}
 % \input{content/class-3.tex}
 % \input{content/class-4.tex}
-\input{content/class-5.tex}
+% \input{content/class-5.tex}
+\input{content/class-6.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
