--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -842,7 +842,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A.inv() @ sp.Matrix(3, 1, [0, 2, 5])"
+    "A.inv() @ sp.Matrix(3, 1, [0, 2, 3])"
    ]
   },
   {
@@ -858,7 +858,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7d005a2",
+   "id": "608d0ebc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a754705",
+   "metadata": {},
+   "source": [
+    "## 习题4.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beb68615",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d538c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (2)\n",
+    "A = sp.Matrix(\n",
+    "    4, 4,\n",
+    "    [1, 5, 3, 0, 0, 4, 6, 2, 0, 0, 9, 1, 0, 0, 0, 1]\n",
+    ")\n",
+    "A.inv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e767b14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "974ff5a1",
+   "metadata": {},
+   "source": [
+    "### 第4题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5ae093d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 手算用高斯消元法\n",
+    "A = sp.Matrix(3, 3, [1, -2, 0, 2, 1, 3, 0, 2, 1])\n",
+    "B = sp.Matrix(3, 3, [1, -1, 1, 2, -3, 1, 3, -4, 1])\n",
+    "X = B * A.inv()\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d075a24",
    "metadata": {},
    "outputs": [],
    "source": []
