--- a/content/class-6.tex
+++ b/content/class-6.tex
@@ -147,6 +147,10 @@ $$\begin{pmatrix} I_r & E_1 \\ E_2 & E_3 \end{pmatrix} \beta' = \begin{pmatrix} 
 $$A^- = Q^{-1} \begin{pmatrix} I_r & E_1 \\ E_2 & E_3 \end{pmatrix} P^{-1}$$
 使得$X_0 = A^-\beta.$
 
+\vspace{1em}
+
+由于广义逆并不唯一，我们可以在$AA^-A = A$以外多加一些条件，得到满足唯一性的Moore–Penrose广义逆（或伪逆，pseudoinverse）$A^+.$ $A^+$的构造可以由$A$的奇异值分解引出。$A^+$可以用于求解最小二乘问题。
+
 \fi  % fi of \ifIncludeAnswer
 
 \newpageorvspace
