Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,8 @@
 % \input{content/class-3.tex}
 % \input{content/class-4.tex}
 % \input{content/class-5.tex}
-\input{content/class-6.tex}
+% \input{content/class-6.tex}
+\input{content/class-7.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
