--- a/content/class-1.tex
+++ b/content/class-1.tex
@@ -6,7 +6,9 @@
 
 \maketitle
 
-% \larger[2]
+\ifLargeLayout
+\larger[2]
+\fi
 
 {\bf 习题1.2 第3题} 已知两个变量$x,y$之间有某种函数关系$y=f(x)$，并且有如下对应值
 \begin{table}[H]
