--- a/content/class-2.tex
+++ b/content/class-2.tex
@@ -6,7 +6,9 @@
 
 \maketitle
 
-% \larger[2]
+\ifLargeLayout
+\larger[2]
+\fi
 
 {\bf 第一题}. 设$\alpha_1, \ldots, \alpha_n$线性无关。令$\beta_j = a_{j1}\alpha_1 + \cdots + a_{jn}\alpha_n,$ $j = 1, \ldots, n.$ 令$\gamma_j = \begin{pmatrix} a_{j1} \\ \vdots \\ a_{jn} \end{pmatrix},$ $j = 1, \ldots, n.$ 证明$\beta_1, \ldots, \beta_n$线性无关 $\Longleftrightarrow$ $\gamma_1, \ldots, \gamma_n$ 线性无关。
 
