--- a/content/class-3.tex
+++ b/content/class-3.tex
@@ -8,7 +8,9 @@
 
 \maketitle
 
-% \larger[2]
+\ifLargeLayout
+\larger[2]
+\fi
 
 非空集合$A$到$B$的映射$f: A \to B$指的是某种规则，使得对于$A$中的元素$x$, 有$B$中的{\color{red}唯一}的一个元素与之对应，记作$f(x)\in B$. 对于映射，我们要掌握的概念主要由
 
