--- a/content/class-5.tex
+++ b/content/class-5.tex
@@ -6,7 +6,9 @@
 
 \maketitle
 
-% \larger[2]
+\ifLargeLayout
+\larger[2]
+\fi
 
 {\bf 第一题} (习题4.2第6题第（2）小题). 已知$A$是$n$阶方阵且满足条件$A^3 = I.$ 计算
 $$\begin{pmatrix} \dfrac{1}{2} A & - \dfrac{\sqrt{3}}{2} A \\ \dfrac{\sqrt{3}}{2} A & \dfrac{1}{2} A \end{pmatrix}^{2000}.$$
