--- a/content/class-6.tex
+++ b/content/class-6.tex
@@ -6,7 +6,9 @@
 
 \maketitle
 
-% \larger[2]
+\ifLargeLayout
+\larger[2]
+\fi
 
 {\bf 第一题} (习题4.3第2题(3)) 设$A$是方阵，$A^k = 0$对某个正整数$k$成立。求证下列方阵可逆，并分别求他们的逆
 $$I + A + \dfrac{1}{2!}A^2 + \cdots + \dfrac{1}{(k-1)!}A^{k-1}.$$
