--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 
 \newif\ifNewPage
 
+\newif\ifLargeLayout
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -25,7 +27,9 @@
 \IncludeAnswertrue
 % \IncludeAnswerfalse
 
-\NewPagefalse
+\NewPagetrue
+
+\LargeLayouttrue
 
 \ifNewPage
 \newcommand{\newpageorvspace}{\newpage}
