update notebook 习题

--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -927,7 +927,273 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d075a24",
+   "id": "78f55eca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792ed961",
+   "metadata": {},
+   "source": [
+    "# 第5章 多项式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30bd95d7",
+   "metadata": {},
+   "source": [
+    "## 习题5.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a38a12e",
+   "metadata": {},
+   "source": [
+    "### 第5题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b017b9dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (1)\n",
+    "x = sp.symbols(\"x\")\n",
+    "f = 2 * x**4 - 5 * x + 8\n",
+    "g = x + 3\n",
+    "\n",
+    "sp.div(f, g, x, domain=sp.RR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43a7f9c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (2)\n",
+    "x = sp.symbols(\"x\")\n",
+    "f = x**3 - x + 2\n",
+    "# g = x + complex(0, 1)\n",
+    "g = x + sp.I\n",
+    "\n",
+    "sp.div(f, g, x, domain=sp.CC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c6ba2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1dede87",
+   "metadata": {},
+   "source": [
+    "## 习题5.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfe448db",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b5ae626",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sp.symbols(\"x\")\n",
+    "f = x**3 - 2* x**2 + 2 * x - 1\n",
+    "g = x**4 - x**3 + 2 * x**2 - x + 1\n",
+    "\n",
+    "sp.gcdex(f, g, x, domain=sp.QQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7489bea4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "589d172c",
+   "metadata": {},
+   "source": [
+    "### 第3题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e98468e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (1)\n",
+    "x = sp.symbols(\"x\")\n",
+    "f = x**3\n",
+    "g = (x - 3)**2\n",
+    "\n",
+    "sp.gcdex(f, g, x, domain=sp.QQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "155f1cb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (2)\n",
+    "x = sp.symbols(\"x\")\n",
+    "f = x**3 - 3\n",
+    "g = x**2 - 2 * x +3\n",
+    "\n",
+    "sp.gcdex(f, g, x, domain=sp.QQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d99f09d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "757960eb",
+   "metadata": {},
+   "source": [
+    "## 习题5.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66571acd",
+   "metadata": {},
+   "source": [
+    "### 第1题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d5cf4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sp.symbols(\"x\")\n",
+    "f = sum([x**(3*n) for n in range(7)])\n",
+    "\n",
+    "sp.factor(f, x, domain=sp.QQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e3b6f0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7d3a71",
+   "metadata": {},
+   "source": [
+    "## 习题5.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "603d2c98",
+   "metadata": {},
+   "source": [
+    "### 第6题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad7251a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, p, q = sp.symbols(\"x, p, q\")\n",
+    "f = x**3 + p*x + q\n",
+    "g = sp.diff(f, x)\n",
+    "\n",
+    "sp.resultant(f, g, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad4c362",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11fe7844",
+   "metadata": {},
+   "source": [
+    "### 第11题"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21984508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (1)\n",
+    "x = sp.symbols(\"x\")\n",
+    "f = x**4 + 4\n",
+    "\n",
+    "sp.factor(f, x, domain=sp.RR), sp.factor(f, x, extension=[sp.I])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a1e78c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (3)\n",
+    "x = sp.symbols(\"x\")\n",
+    "f = x**12 - 1\n",
+    "\n",
+    "sp.factor(f, x, domain=sp.RR), sp.factor(f, x, extension=[sp.I])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f178bd8",
    "metadata": {},
    "outputs": [],
    "source": []
