--- a/content/class-7.tex
+++ b/content/class-7.tex
@@ -64,7 +64,7 @@ r_3(x) & = r_2(x) - {\color{red} 6} \cdot g(x) = - x - 1 - 6 (- 4x + 1) = 23 x -
 
 (4) 若$2 + \sqrt{3}$是$h(x)$的根，那么根据$g(x)$的选取知道$\deg h \geqslant \deg g.$ 于是令$h(x) = g(x) q(x) + r(x),$ $\deg r < \deg g.$ 若$r(x) \neq 0,$ 那么$2 + \sqrt{3}$也是$r(x)$的根，这与$2 + \sqrt{3}$不是有理数矛盾。于是必须有$r(x) = 0,$ 即知$g(x)$整除$h(x).$ 由于$2 - \sqrt{3}$是$g(x)$的根，从而也是$h(x)$的根。
 
-这里$2 - \sqrt{3}$是$2 + \sqrt{3}$的共轭元（在involution $\sigma: \mathbb{Q}(\sqrt{3}) / \mathbb{Q} \to \mathbb{Q}(\sqrt{3}) / \mathbb{Q}, ~ \sqrt{3} \mapsto -\sqrt{3}$下），从而也是$g(x)$的根。类似的结论大家会在日后要学习的代数数论中学习更多。
+这里$2 - \sqrt{3}$是$2 + \sqrt{3}$的共轭元（在involution $\sigma: \mathbb{Q}(\sqrt{3}) / \mathbb{Q} \to \mathbb{Q}(\sqrt{3}) / \mathbb{Q}, ~ \sqrt{3} \mapsto -\sqrt{3}$下），从而也是$g(x)$的根。类似的结论大家会在日后要学习的抽象代数、代数数论等后续课程中学习更多。
 
 \fi  % fi of \ifIncludeAnswer
 
@@ -89,6 +89,54 @@ r_2(x) & = f'(x) - {\color{red} \left( \dfrac{9}{2p}x - \dfrac{27q}{4p^2} \right
 于是必须有$0 = r_2(x) = p + \dfrac{27q^2}{4p^2},$ 即$4p^3 + 27q^2 = 0.$ 以上辗转相除过程中的$\dfrac{1}{3}x, \dfrac{9}{2p}x - \dfrac{27q}{4p^2}$都是多项式的带余除法得到的商。
 
 若$p = 0,$ 那么显然只要$q$不等于0, $f(x)$就没有重根。所以，此时$f(x)$有重根$\Rightarrow q = 0.$ 这个关系也能用$4p^3 + 27q^2 = 0$表达。
+
+\vspace{0.5em}
+
+更一般地，我们可以通过多项式的判别式（determinant）来判断它是否有重根。一个多项式有重根当且仅当它的判别式为0. 设$f(x) = a_{n}x^{n} + a_{n-1}x^{n-1} + \cdots + a_{0},$ 系数属于某个域$\mathbb{F},$ 那么它的判别式定义为
+$$\operatorname{Disc}_x(f) = a_n^{2n-2} \prod_{\substack{1 \leqslant i < j \leqslant n \\ f(\lambda_i) = 0}} (\lambda_i - \lambda_j)^2 \in \mathbb{F}.$$
+判别式的计算可以利用结式（resultant）进行。设
+\begin{align*}
+f(x) & = a_{n}x^{n} + a_{n-1}x^{n-1} + \cdots + a_{0} \\
+g(x) & = b_{m}x^{m} + b_{m1}x^{m-1} + \cdots + b_{0}
+\end{align*}
+是系数在域$\mathbb{F}$内的两个多项式，那么它们的结式被定义为
+$$
+\operatorname{Res} (f, g) = a_n^n b_m^m \prod_{ \substack{(\lambda, \mu) \in \bar{\mathbb{F}}^2 \\ f(\lambda) = 0, g(\mu) = 0}} (\lambda - \mu) \in \mathbb{F}
+$$
+可以看出判别式与结式的关系为
+$$
+\operatorname{Disc}_{x}(f) = \frac{(-1)^{n(n-1)/2}}{a_{n}} \operatorname{Res}_{x}(f, f')
+$$
+可以很容易地列举结式的部分性质：
+\begin{itemize}
+\item $\operatorname{Res} (f, g) = (-1)^{mn} \operatorname{Res} (g, f)$
+\item $\operatorname{Res} (f_1f_2, g) = \operatorname{Res} (f_1, g) \cdot \operatorname{Res} (f_2, g)$
+\item 设$r(x) = f(x) - q(x) \cdot g(x)$, 那么$\operatorname{Res} (r, g) = b_m^{\deg r - n}\operatorname{Res} (f, g)$
+\end{itemize}
+结式可用如下的行列式进行计算
+$$
+\operatorname{Res} (f, g) = \begin{vmatrix} a_{n} & 0 & \cdots & 0 & b_{m} & 0 & \cdots & 0 \\ a_{n-1} & a_{n} & \cdots & 0 & b_{m-1} & b_{m} & \cdots & 0 \\ a_{n-2} & a_{n-1} & \ddots & 0 & b_{m-2} & b_{m-1} & \ddots & 0 \\ \vdots & \vdots & \ddots & a_{n} & \vdots & \vdots & \ddots & b_{m} \\ a_{0} & a_{1} & \cdots & \vdots & b_{0} & b_{1} & \cdots & \vdots \\ 0 & a_{0} & \ddots & \vdots & 0 & b_{0} & \ddots & \vdots \\ \vdots & \vdots & \ddots & a_{1} & \vdots & \vdots & \ddots & b_{1} \\ 0 & 0 & \cdots & a_{0} & 0 & 0 & \cdots & b_{0}\end{vmatrix}_{(m+n) \times (m+n)}
+$$
+
+可以算得三次多项式$f(x) = x^3 + px + q$的判别式为
+$$Disc_x(f) = -4p^3 - 27q^2.$$
+
+可以通过如下的Python程序计算一般的多项式的判别式
+\begin{center}
+\begin{lstlisting}[language=Python]
+import sympy as sp
+from typing import Union
+
+def polyn_determinant(f: Union[sp.Add, sp.Poly], x: sp.Symbol) -> Union[sp.Add, sp.Number]:
+    f = sp.Poly(f, x)
+    f_prime = sp.diff(f, x)
+    leading_coeff = f.coeffs()[0]
+    n = f.degree()
+    pol_det = sp.resultant(f, f_prime, x) * (-1)**(n*(n-1)//2) / leading_coeff
+    return sp.simplify(pol_det)
+\end{lstlisting}
+\end{center}
+更多例子可见\href{https://gitee.com/wenh06/buaa-advanced-algebra-2021/blob/master/notebooks/class-7.ipynb}{Jupyter Notebook}.
 
 \fi  % fi of \ifIncludeAnswer
 
