--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -44,8 +44,10 @@
     "from typing import Sequence, Union\n",
     "from numbers import Number\n",
     "\n",
+    "\n",
     "def vandermonde_det(arr: Sequence[Number]) -> Number:\n",
     "    return reduce(lambda a, b: a * b, [(arr[j] - arr[i]) for i in range(len(arr)-1) for j in range(i+1, len(arr))])\n",
+    "\n",
     "\n",
     "def vandermonde_mat(arr: Sequence[Number], latex: bool = False) -> Union[str, Number]:\n",
     "    n = len(arr)\n",
@@ -54,11 +56,13 @@
     "        return sp.latex(mat)\n",
     "    return mat\n",
     "\n",
+    "\n",
     "def circulant_mat(arr: Sequence[Number]) -> Number:\n",
     "    n = len(arr)\n",
     "    mat = np.vstack([np.concatenate((arr[i:], arr[:i])) for i in range(n)])\n",
     "    mat = sp.Matrix(mat)\n",
     "    return mat\n",
+    "\n",
     "\n",
     "def circulant_det(arr: Sequence[Number]) -> Number:\n",
     "    # n = len(arr)\n",
@@ -66,7 +70,33 @@
     "    # sp_arr = sp.Matrix(n, 1, arr)\n",
     "    # mat = sp.Matrix(n, n, [pow(pow(u, i), j) for i in range(n) for j in range(n)])\n",
     "    # return reduce(lambda a, b: a * b, mat @ sp_arr)\n",
-    "    return circulant_mat(arr).det()"
+    "    return circulant_mat(arr).det()\n",
+    "\n",
+    "\n",
+    "def polyn_determinant(f: Union[sp.Add, sp.Poly], x: sp.Symbol) -> Union[sp.Add, sp.Number]:\n",
+    "    \"\"\"\n",
+    "    computes the determinant of a univariate polynomial\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    f: sympy.Add or sympy.Poly,\n",
+    "        the univariate polynomial\n",
+    "    x: sympy.Symbol,\n",
+    "        the variable\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    pol_det: sympy.Add or sympy.Number,\n",
+    "        the determinant of the input univariate polynomial `f`\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    f = sp.Poly(f, x)\n",
+    "    f_prime = sp.diff(f, x)\n",
+    "    leading_coeff = f.coeffs()[0]\n",
+    "    n = f.degree()\n",
+    "    pol_det = sp.resultant(f, f_prime, x) * (-1)**(n*(n-1)//2) / leading_coeff\n",
+    "    pol_det = sp.simplify(pol_det)\n",
+    "    return pol_det"
    ]
   },
   {
@@ -1141,9 +1171,8 @@
    "source": [
     "x, p, q = sp.symbols(\"x, p, q\")\n",
     "f = x**3 + p*x + q\n",
-    "g = sp.diff(f, x)\n",
     "\n",
-    "sp.resultant(f, g, x)"
+    "polyn_determinant(f, x)"
    ]
   },
   {
