--- a/content/class-7.tex
+++ b/content/class-7.tex
@@ -48,7 +48,7 @@ f(a) & = a^5 - 4a^4 + 3a^3 - 2a^2 + a - 1 \\
 
 \vspace{0.5em}
 
-(3) 我们用多项式的带余除法（所谓的长除法, long division）：
+(3) 我们用多项式的带余除法：
 \begin{align*}
 r_1(x) & = f(x) - {\color{red} x^3} \cdot g(x) = - 4x^4 + 3x^3 - 2x^2 + x - 1 - x^3 (- 4x + 1) \\
 & = - 4x^4 + 3x^3 - 2x^2 + x - 1 + 4x^4 - x^3 \\
@@ -92,9 +92,16 @@ r_2(x) & = f'(x) - {\color{red} \left( \dfrac{9}{2p}x - \dfrac{27q}{4p^2} \right
 
 \vspace{0.5em}
 
-更一般地，我们可以通过多项式的判别式（determinant）来判断它是否有重根。一个多项式有重根当且仅当它的判别式为0. 设$f(x) = a_{n}x^{n} + a_{n-1}x^{n-1} + \cdots + a_{0},$ 系数属于某个域$\mathbb{F},$ 那么它的判别式定义为
+更一般地，我们可以通过多项式的判别式（determinant）来判断它是否有重根。一个多项式有重根当且仅当它的判别式为0. 例如我们在中学已经学习过了，对一个二次多项式$f(x) = ax^2 + bx + c,$ 它在实数域内的根的情况完全由它的判别式$\Delta = b^2 - 4ac$决定：
+\begin{itemize}
+\item $\Delta > 0 \Rightarrow$ $f(x)$在$\mathbb{R}$内有两个不同的实根；
+\item $\Delta = 0 \Rightarrow$ $f(x)$在$\mathbb{R}$内有一个实根；
+\item $\Delta < 0 \Rightarrow$ $f(x)$在$\mathbb{R}$内无实根，但在$\mathbb{C}$内有两个共轭（不同）的虚根。
+\end{itemize}
+
+设$f(x) = a_{n}x^{n} + a_{n-1}x^{n-1} + \cdots + a_{0},$ 系数属于某个域$\mathbb{F},$ 那么它的判别式定义为
 $$\operatorname{Disc}_x(f) = a_n^{2n-2} \prod_{\substack{1 \leqslant i < j \leqslant n \\ f(\lambda_i) = 0}} (\lambda_i - \lambda_j)^2 \in \mathbb{F}.$$
-判别式的计算可以利用结式（resultant）进行。设
+判别式的计算可以利用多项式$f$与它的微商$f'$的结式（resultant）进行。设
 \begin{align*}
 f(x) & = a_{n}x^{n} + a_{n-1}x^{n-1} + \cdots + a_{0} \\
 g(x) & = b_{m}x^{m} + b_{m1}x^{m-1} + \cdots + b_{0}
